Added: -CRC16 -CRC32 -MD5 -SHA256

--- a/app/src/main/res/layout/fragment_affine_code_dec.xml
+++ b/app/src/main/res/layout/fragment_affine_code_dec.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.affine_code.AffineCodeDecFragment">
+    tools:context=".fragments.affine_code_fragment.AffineCodeDecFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
