--- a/app/src/main/res/layout/fragment_d_e_s_cipher_enc.xml
+++ b/app/src/main/res/layout/fragment_d_e_s_cipher_enc.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_margin="12dp"
-    tools:context=".fragments.advanced_encryption_standard_fragment.AESCipherEncFragment">
-
+    tools:context=".fragments.data_encryption_standard_fragment.DESCipherEncFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -48,7 +47,7 @@
         android:id="@+id/sizeKeyForEncTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       />
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -72,13 +71,12 @@
         android:id="@+id/sizeIVForEncTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-      />
+        />
     <!--    <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:expandedHintEnabled="false">
-
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/vector_init_edit_text"
                 android:layout_width="match_parent"
@@ -135,5 +133,4 @@
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
 </LinearLayout>
