--- a/app/src/main/res/layout/fragment_a_s_c_i_i_code_dec.xml
+++ b/app/src/main/res/layout/fragment_a_s_c_i_i_code_dec.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.ascii_code.ASCIICodeDecFragment">
+    tools:context=".fragments.ascii_code_fragment.ASCIICodeDecFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
