--- a/app/src/main/res/layout/fragment_a_s_c_i_i_code_enc.xml
+++ b/app/src/main/res/layout/fragment_a_s_c_i_i_code_enc.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.ascii_code.ASCIICodeEncFragment">
+    tools:context=".fragments.ascii_code_fragment.ASCIICodeEncFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
