--- a/app/src/main/res/layout/fragment_affine_code_enc.xml
+++ b/app/src/main/res/layout/fragment_affine_code_enc.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.affine_code.AffineCodeEncFragment">
+    tools:context=".fragments.affine_code_fragment.AffineCodeEncFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
