--- a/app/src/main/res/layout/fragment_base64_enc.xml
+++ b/app/src/main/res/layout/fragment_base64_enc.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.base64_encode.Base64EncFragment">
+    tools:context=".fragments.base64_encode_fragment.Base64EncFragment">
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
