--- a/app/src/main/res/layout/fragment_caesar_cipher_dec.xml
+++ b/app/src/main/res/layout/fragment_caesar_cipher_dec.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.caesar_cipher.CaesarCipherDecFragment">
+    tools:context=".fragments.caesar_cipher_fragment.CaesarCipherDecFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
