--- a/app/src/main/res/layout/fragment_caesar_enc_cipher.xml
+++ b/app/src/main/res/layout/fragment_caesar_enc_cipher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.caesar_cipher.CaesarCipherEncFragment">
+    tools:context=".fragments.caesar_cipher_fragment.CaesarCipherEncFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
