--- a/app/src/main/res/layout/fragment_md5.xml
+++ b/app/src/main/res/layout/fragment_md5.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.md5.MD5Fragment">
+    tools:context=".fragments.md5_fragment.MD5Fragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
