--- a/app/src/main/res/layout/fragment_s_h_a256.xml
+++ b/app/src/main/res/layout/fragment_s_h_a256.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.sha256.SHA256Fragment">
+    tools:context=".fragments.sha256_fragment.SHA256Fragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
