--- a/app/src/main/res/layout/fragment_u_t_f8_dec.xml
+++ b/app/src/main/res/layout/fragment_u_t_f8_dec.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="12dp"
     android:orientation="vertical"
-    tools:context=".fragments.utf_8_code.UTF8DecFragment">
+    tools:context=".fragments.utf_8_code_fragment.UTF8DecFragment">
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
