Added: -Blowfish -HEX -Binary

--- a/app/src/main/res/layout/fragment_select_cipher.xml
+++ b/app/src/main/res/layout/fragment_select_cipher.xml
@@ -115,6 +115,32 @@
                     android:backgroundTint="@color/black"
                     android:text="DES"
                     android:textSize="12sp" />
+                <Button
+                    android:id="@+id/encBlowfishBt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/encDESCipherBt"
+                    android:backgroundTint="@color/black"
+                    android:text="Blowfish"
+                    android:textSize="12sp" />
+
+                <Button
+                    android:id="@+id/encBinaryBt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/encBlowfishBt"
+                    android:backgroundTint="@color/black"
+                    android:text="Binary"
+                    android:textSize="12sp" />
+
+                <Button
+                    android:id="@+id/encHexBt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/encBinaryBt"
+                    android:backgroundTint="@color/black"
+                    android:text="Hex"
+                    android:textSize="12sp" />
 
             </RelativeLayout>
         </LinearLayout>
